fixing background video on ios

--- a/chivas/css/starter-template.css
+++ b/chivas/css/starter-template.css
@@ -60,16 +60,16 @@ a, a:hover {
   z-index: -1;
 }
 
-.bg-video video {
+.bg-video video, .video-placeholder  {
   position: relative;
   width: 100%;
-  height: 100%
-  /*
-  min-width: 100% !important;
-  min-height: 100% !important;
-  width: auto !important;
-  height: auto !important;
-  */
+  height: 100%;
+}
+
+.video-placeholder {
+  background-image: url(../img/chivastvbg.jpg);
+  background-position: 0;
+  min-height: 35em;
 }
 
 .video-content-overlay {
